# MiniProject_PCSS

./: .gitignore  README.md  README.txt
winsockTestClient/: CMakeLists.txt  Fleet.h  clientGame.cpp  clientGame.h  main.cpp  todos.txt
winsockTestClient2/: CMakeLists.txt  Fleet.cpp  clientGame.cpp  clientGame.h  main.cpp  todos.txt
winsockTestServer/: CMakeLists.txt  ConnectedDeviceList.cpp  ConnectedDeviceList.h  DeviceConnected.cpp  DeviceConnected.h  Game.cpp  Game.h  Game2maybe.cpp  Game2maybe.h  main.cpp
